templates/allocation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allocation-be  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allocation-be
  template:
    metadata:
      labels:
        app: allocation-be
    spec:
      containers:
      - name: allocation-be
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allocation-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allocation-fe
  template:
    metadata:
      labels:
        app: allocation-fe
    spec:
      containers:
      - name: allocation-fe
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
