templates/optimization-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: optimization  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: optimization
  template:
    metadata:
      labels:
        app: optimization
    spec:
      containers:
      - name: optimization
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
