templates/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: backend
  type: ClusterIP
status:
  loadBalancer: {}
