templates/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
status:
  loadBalancer: {}
